--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width">
   
-  <link id="favicon" rel="icon" href="https://cdn.glitch.com/55f963f5-bf15-449c-b526-e46a7cd2b96f%2Fbingolingobw.ico?1508699920097" type="image/x-icon">
+  <link id="favicon" rel="icon" href="https://cdn.glitch.com/55f963f5-bf15-449c-b526-e46a7cd2b96f%2Fbingolingobwo.ico?1508851523189" type="image/x-icon">
   <title>BingoLingo!</title>
 
   <!-- <link rel="stylesheet" href="/style.css"> -->
@@ -14,37 +14,37 @@
 <style>
   *{box-sizing:border-box;}
   
+ html{
+    border:1px dotted grey;
+   height:100%;
+   margin:0px;} 
+  
  body{display:-webkit-flex;
   -webkit-flex-direction:column;
     border:1px solid grey;
     height:100%;
     width:100%;
    margin:0px;}
-  html{
-    border:1px dotted grey;
-   height:100%;
-   margin:0px;}
-   
+
   div{margin:5px;}
 
- #h1ti{
-   color:white;
-  margin:auto;
-  font-family:arial;
-  display:inline-block}
-
+ 
 #dvti{
   border:1px solid grey;
  border-radius:5px 55px;
   text-align:center;
   background-color:black;}
+  
+  #h1ti{
+   color:white;
+  margin:auto;
+  font-family:arial;
+  display:inline-block}
 
   #dvmed{
    border:1px solid grey;
    border-radius:5px;
-   height:100%;
-   display:-webkit-flex;
-  -webkit-flex-direction:column;}
+   height:100%;}
   
   
   
@@ -54,38 +54,28 @@
    background-color:#aaa;
    font-family:arial;}
 
-  #dvmtb{border:1px solid grey;
-    display:-webkit-flex;
-  -webkit-flex-direction:row;
-   -webkit-justify-content:space-evenly}
-  
-  #dvmtb>div{
-  border:1px solid grey;
-  width:100%;
-  text-align:center;
-  border-radius:5px;
-  font-family:arial;}
-  
-  #dvmtb>div:hover{
-    background-color:#009A79;}
-  
-#dvmedc{border:1px solid grey;
-  height:100%;}
-  
-  #dvlg{position:absolute;
-   right:20px;
-   top:15px;}
-  #dvlg>a{color:black;
-   border:1px solid grey;
-   border-radius:5px;
-   background-color:white;
-   text-decoration:none;}
+ 
   </style>
   
 </head>
 <body>
 
  <%- body %>
+  
+  <div id="dvfnd">
+    Supported by <a href="https://glitch.com/" target="_blank">glitch.com</a>
+    /
+      source code: <a href="https://glitch.com/edit/#!/bingolingo-test?path=README.md:1:0" target="_blank">code</a>
+      /
+      send your : <a href="https://shrib.com/#bingolingo-suggestions" target="_blank">Suggestions</a>
+      <br>
+      Made with 
+      <img src="https://png.icons8.com/potato/color/24" title="Potato" width="24" height="24">
+       by BingoLingo Team
+      <br>
+      
+   
+</div><!-- footer -->
   
   <!-- <script src="/client.js"></script> -->
   
