--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -10,6 +10,7 @@
   <title>BingoLingo!</title>
 
   <!-- <link rel="stylesheet" href="/style.css"> -->
+  <script src="https://code.jquery.com/jquery.js"></script>
   
 <style>
   *{box-sizing:border-box;}
@@ -62,12 +63,14 @@
 
  <%- body %>
   
+ <!-- layout de aqui para abajo -->
+  
   <div id="dvfnd">
     Supported by <a href="https://glitch.com/" target="_blank">glitch.com</a>
     /
       source code: <a href="https://glitch.com/edit/#!/bingolingo-test?path=README.md:1:0" target="_blank">code</a>
       /
-      send your : <a href="https://shrib.com/#bingolingo-suggestions" target="_blank">Suggestions</a>
+      send your : <a href="https://shrib.com/#bingolingo-suggestions" target="_blank">Suggestion</a>
       <br>
       Made with 
       <img src="https://png.icons8.com/potato/color/24" title="Potato" width="24" height="24">
@@ -78,6 +81,160 @@
 </div><!-- footer -->
   
   <!-- <script src="/client.js"></script> -->
+<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">  
+<script src="/socket.io/socket.io.js"></script> 
+<!--   <script src="https://cors-anywhere.herokuapp.com/https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.3/socket.io.js"></script> -->
+<script>
+
+jQuery(function($) {
+  var Sk=io.connect();
+  
+  var $dvmtbcht= $("#dvmtbcht");
+  
+  var $dvchtuc= $("#dvchtuc");
+  
+
+
+$dvmtbcht.on("click",function(e){
+ e.preventDefault();
+ Sk.emit("userva","hola");
+});//click tab chat
+  
+  
+Sk.on("usernames",function(dt){
+ var html="";
+for(var usrnm in dt){
+html+="<li>"+usrnm+"</li>";
+}//for
+$dvchtuc.html(html);
+});//skon usernames
+  
+ 
+ var fmisndmsg;
+var inimsg;
+  
+lige.onclick=function(){
+
+var nudiv=document.createElement("DIV");
+nudiv.id="dvicht";
+  
+var dvichtt=document.createElement("DIV");
+  dvichtt.id="dvichtt";
+ 
+dvichtt.innerHTML="General";
+  
+var dvichtcu=document.createElement("DIV"); 
+  dvichtcu.id="dvichtcu";
+var dvichtc=document.createElement("DIV"); 
+  dvichtc.id="dvichtc";
+var dvichtu=document.createElement("DIV"); 
+  dvichtu.id="dvichtu";
+dvichtcu.appendChild(dvichtc);
+dvichtcu.appendChild(dvichtu);
+  
+var dvichtmsg=document.createElement("DIV"); 
+  dvichtmsg.id="dvichtmsg";
+fmisndmsg=document.createElement("form"); 
+  fmisndmsg.id="fmisndmsg";
+inimsg=document.createElement("input"); 
+  inimsg.id="inimsg";
+  inimsg.type="text";
+  inimsg.placeholder="write your message";
+var btnimsg=document.createElement("button");
+  btnimsg.type="submit";
+  btnimsg.innerHTML="send";
+fmisndmsg.appendChild(inimsg);
+fmisndmsg.appendChild(btnimsg);
+
+dvichtmsg.appendChild(fmisndmsg);
+
+nudiv.appendChild(dvichtt);
+nudiv.appendChild(dvichtcu);
+nudiv.appendChild(dvichtmsg);  
+  
+  /*
+  var el = $('<a href="#">test</a>');
+
+$("#div_element").append(el);
+
+el.click(function(){alert("test")});
+
+// or preferrably:
+el.on('click', function(){alert("test")});
+  */
+  
+/*  
+nudiv.innerHTML='<div id="dvichtt">General</div>'+
+  '<div id="dvichtcu">'+
+  '<div id="dvichtc"></div><div id="dvichtu"></div>'+
+  '</div>'+  
+  '<div id="dvichtmsg"><form id="fmisndmsg">'+
+  '<input type="text" id="inimsg" placeholder="write your message">'+
+  '<button id="btnimsg" type="submit">send</button></form></div>';
+*/
+dvchtc.appendChild(nudiv);
+  
+$("#dvicht").draggable();
+$("#dvicht").resizable();
+  /*
+$fmisndmsg=$("#fmisndmsg");
+$inimsg=$("#inimsg"); */  
+  /*
+ fmisndmsg.submit(function(e) {
+  alert("hoo");
+   e.preventDefault();
+  alert("hi");
+   if(inimsg.val()!='')
+     Sk.emit('send message', inimsg.val());
+  
+  inimsg.val('');
+  
+});//on send msg
+  */
+Sk.emit("opngnrl");
+   
+};//general onclick dar dvcht
+  
+
+ 
+ 
+$("#dvchtc").on("click","#fmisndmsg",function(){
+
+$(this).submit(function(e) {
+   e.preventDefault();
+   if($("#inimsg").val()!='')
+     Sk.emit('send message', $("#inimsg").val());
+  
+  $("#inimsg").val('');
+  
+  //$("#dvichtc").scrollTop($('#dvichtc').get(0).scrollHeight);//$("#dvichtc").height()
+  
+  $("#dvichtc").stop().animate({ scrollTop: $("#dvichtc")[0].scrollHeight}, 1000);
+  
+  //$('#dvichtc').animate({
+  //scrollTop: $('#dvichtc').get(0).scrollHeight}, 2000);
+  
+  //var myDiv = $("#dvichtc");
+//myDiv.animate({ scrollTop: myDiv.attr("scrollHeight") - myDiv.height() }, 3000);
+  
+});//on send msg
+});//
+  
+Sk.on('new message', function(data) {
+  $("#dvichtc").append('<b>'+data.nick+":</b> "+data.msg+"<br/>"); 
+});//on receive msg
+  
+  
+Sk.on("mndusrgnrl",function(dt){
+  var html=""
+  for(var nombr in dt){
+    html+=nombr+"<br>";
+  }
+  $("#dvichtu").html(html);
+});//skon mandaron el usuario
+  
+})//jquery
+</script>
   
 </body>
 </html>
