--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,71 +1,217 @@
-<style>
-#dvmed{
- display:-webkit-flex;
- -webkit-flex-direction:column;}
-
-
-  #dvmtb{border:1px solid grey;
-    display:-webkit-flex;
-  -webkit-flex-direction:row;
-   -webkit-justify-content:space-evenly}
-
-  
-  #dvmtb>div{
-  border:1px solid grey;
-  width:100%;
-  text-align:center;
-  border-radius:5px;
-  font-family:arial;}
-  
-  #dvmtb>div:hover{
-    background-color:#009A79;}
-  
-#dvmedc{border:1px solid grey;
-  height:100%;}
-  
-  
-@media only screen and (min-width:400px){
-#dvlg{
- position:absolute;
- top:15px;
- right:20px;}
-}/*media*/
-  
-  #dvlg a{color:black;
-   border:1px solid grey;
-   border-radius:5px;
-   background-color:white;
-   text-decoration:none;}
-
-</style>
-
-<div id="dvti">
-  <h1 id="h1ti">BingoLingo</h1>
-   <div id="dvlg">
-<a href=""><%= user.firstnm %></a>
-</div>
-</div><!-- header -->
-  
-  <div id="dvmed">
+    <style>
+    #dvmed{
+     display:-webkit-flex;
+     -webkit-flex-direction:column;}
     
-    <div id="dvmtb">
-      <div id="dvmtbcht">Chat</div>
-<div id="dvmtbgm">Game</div>
-<div id="dvmtbcm">Community</div>
-<div id="dvmtblss">Lessons</div>
+    
+      #dvmtb{border:1px solid grey;
+        display:-webkit-flex;
+      -webkit-flex-direction:row;
+       -webkit-justify-content:space-evenly}
+    
       
-    </div>
+      #dvmtb>div{
+      border:1px solid grey;
+      width:100%;
+      text-align:center;
+      border-radius:5px;
+      font-family:arial;
+      cursor:pointer;}
+      
+      #dvmtb div:hover{
+        background-color:black;
+        color:white;}
+      
+    #dvmedc{border:1px solid grey;
+      height:100%;
+      position:relative;}
+      
+      
+    @media only screen and (min-width:400px){
+    #dvlg{
+     position:absolute;
+     top:15px;
+     right:20px;}
+    }/*media*/
+      
+      #dvlg{color:black;
+       border:1px solid grey;
+       border-radius:5px;
+       background-color:white;
+       cursor:pointer;}
     
-<div id="dvmedc">
-  <p>User info</p>
-<p>First Name: <%= user.firstnm %></p>
-<p>Last Name: <%= user.lastnm %></p>
+    #dvmedc>div:nth-child(-n+4){
+      /*border:1px dotted grey;*/
+      height:99%;width:99%;
+      position:absolute;
+      display:none;}
+    
+    #dvchtc{background-color:#deb887;}  
+      
+    #dvlssc{background-color:#2f4f4f;
+      color:white;}
+    
+    #dvcmmc{background-color:#0079a9;
+      color:white;}
+    
 
-   <div>
+    </style>
+<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    
+    <div id="dvti">
+      <h1 id="h1ti">BingoLingo</h1>
+       <div id="dvlg" onclick="opntB(event,'#dvusrc',this)"
+        ><%= user.firstnm %></div>
+    </div><!-- header -->
+      
+      <div id="dvmed">
+        
+        <div id="dvmtb">
+    <div id="dvmtbcht"  onclick="opntB(event,'#dvchtc',this)"
+         >Chat</div>
+    <div id="dvmtbgm"  onclick="opntB(event,'#dvgmc',this)"
+         >Game</div>
+    <div id="dvmtbcmm"  onclick="opntB(event,'#dvcmmc',this)"
+         >Community</div>
+    <div id="dvmtblss"  onclick="opntB(event,'#dvlssc',this)"
+         >Lesson</div>
+          
+        </div><!-- div tabs -->
+      
+   <style>
+   #dvchtc>*>div{
+    border:1px solid grey;
+    border-radius:5px;}
+   #dvchtrnm,#dvchtunm{
+    border:1px solid grey;
+    border-radius:5px;
+    background-color:black;
+    color:white;
+    display:inline-block;
+    font-family:arial;}
+
+   #lige{
+    cursor:pointer;}
+  
+  #dvicht{
+        position:absolute;
+        left:20%; top:20%;}
+     
+/*style chat*/
+     
+   #dvicht{
+        border:1px solid grey;
+        width:240px;
+        height:200px;
+        background-color:white;
+        display:-webkit-flex;
+        -webkit-flex-direction:column;}
+      
+      #dvicht div{border:1px solid grey;
+       border-radius:5px;}
+      
+      #dvichtt{
+        text-align:center;
+        background-color:black;
+        color:white;
+        font-family:arial;
+        cursor:move;}
+     
+     #dvichtcu{display:-webkit-flex;
+       -webkit-flex-direction:row;
+       height:100%;}
+      
+      #dvichtc{
+        width:100%;
+        height:100%;
+        overflow-y:auto;}
+        
+      #dvichtu{
+        width:100px;
+        height:100%;
+        float:right;}
+     
+     #dvichtmsg{width:100%;}
+     #inimsg{width:70%;}
+     
+   </style>     
+
+    <div id="dvmedc">
+
+      <div id="dvchtc">
+        <div id="dvchtru">
+          <div id="dvchtr">
+          <div id="dvchtrnm">Rooms</div>
+          <div id="dvchtrc">
+            <li id="lige">General</li>
+          </div>
+          </div>
+          <div id="dvchtu">
+          <div id="dvchtunm">Users</div>
+          <div id="dvchtuc"></div>
+          </div>
+          </div>
+      </div>
+
+      <div id="dvgmc">In construction.</div>
+      <div id="dvcmmc">In future.</div>
+      <div id="dvlssc">The teacher has not arrived yet.</div>
+      
+<div id="dvusrc">
+      <p>User info</p>
+ <p>First Name: <%= user.firstnm %></p>
+ <p>Last Name: <%= user.lastnm %></p>
+
  <a href="/logout" >Logout</a>
 </div>
-    
-</div><!-- middle -->
+
+    </div>
+        
+    </div><!-- middle -->
+      
+   <script>
+    function opntB(evt,idnm,thel){
+      var dvmcs= document.querySelectorAll("#dvmedc>div");
+      for(var i=0;i<dvmcs.length;i++){
+        dvmcs[i].style.display="none";
+      }//for
+      document.querySelector(idnm).
+       style.display="block";
+
+      var dvmtbs=document.querySelectorAll("#dvmtb>div");
+      for(var i=0;i<dvmtbs.length;i++){
+        dvmtbs[i].style.backgroundColor="";
+        dvmtbs[i].style.color="";
+      }//for
+      
+      if(thel.id!="dvlg"){
+       var tb=document.getElementById(thel.id);
+        tb.style.backgroundColor="black";
+        tb.style.color="white";
+      }//if not dvlg
+
+    }//opentab
+     
+/*    
+lige.onclick=function(){
+
+var nudiv=document.createElement("DIV");
+nudiv.id="dvicht";
+nudiv.innerHTML='<div id="dvichtt">General</div>'+
+  '<div id="dvichtc"></div><div id="dvichtu"></div>'+
+  '<div id="dvichtmsg"><form id="fmisndmsg">'+
+  '<input type="text" id="inimsg" placeholder="write your message">'+
+  '<button type="submit">send</button></form></div>';
+
+dvchtc.appendChild(nudiv);
   
-  
-  
+$("#dvicht").draggable();
+};//general onclick dar dvcht
+*/
+     
+function insertAfter(referenceNode, newNode) {
+    referenceNode.parentNode.insertBefore(newNode, referenceNode.nextSibling);
+}//insert after
+     
+   </script> 
