--- a/client/styles/chat.css
+++ b/client/styles/chat.css
@@ -1,12 +1,15 @@
 /*style chat..*/
    #dvchtc>*>div{
-    border:1px solid grey;border-radius:5px;}
+    border:1px solid grey;
+       border-radius:5px;}
 
   #dvchtrnm{
     display:inline-block;/*text-align:center;*/
-   border:1px solid grey;border-radius:5px;
+   border:1px solid grey;
+      border-radius:5px;
     font-family:arial;
-    background-color:#9370DB;color:white;}
+    background-color:#9370DB;
+      color:white;}
 
    #lige{
     border:1px outset grey;
@@ -16,51 +19,78 @@
 /*chat general*/
 
 #dvicht{
-  display:flex;flex-direction:column;/*overflow:auto;resize:both;*/
-  position:absolute;left:15%;top:20%;
+  display:flex;
+    flex-direction:column;
+  /*overflow:auto;resize:both;*/
+  position:absolute;
+    left:15%;top:20%;
   width:250px;height:200px;
  border:1px solid grey;
   background-color:white;}
         
       
 #dvicht div{
-  border:1px solid grey;border-radius:5px;margin:0px;}
-      
+  border:1px solid grey;
+    border-radius:5px;
+    margin:0px;}
+     
+
+
  #dvichtt{
-   display:flex;flex-direction:row;justify-content:center;
+   display:flex;
+     flex-direction:row;
+     justify-content:center;
    height:30px;
   font-family:arial;}
         
   #dvichttn{
-    display:flex;flex-direction:column;justify-content:center;text-align:center;
+    display:flex;
+      flex-direction:column;
+      justify-content:center;
+      text-align:center;
     width:70%;height:100%;
-   background-color:#9370DB;color:white;
+   background-color:#9370DB;
+      color:white;
     cursor:move;}
         
       
 #dvichttm{
-   display:flex;flex-direction:column;justify-content:center;text-align:center;
+   display:flex;
+     flex-direction:column;
+     justify-content:center;
+     text-align:center;
    width:10%;height:100%;
    cursor:default;}
 
 #dvichttl{
-  display:flex;flex-direction:column;justify-content:center;text-align:center;
+   display:flex;
+     flex-direction:column;
+     justify-content:center;
+     text-align:center;
    width:10%;height:100%;
    cursor:default;}
     
 #dvichttx{
-   display:flex;flex-direction:column;justify-content:center;text-align:center;
+   display:flex;
+     flex-direction:column;
+     justify-content:center;
+     text-align:center;
    width:10%;height:100%;
-  background-color:#9370DB;color:white;/*#800000 #4B0082*/
+  background-color:#9370DB;
+    color:white;
+  /*#800000 #4B0082*/
    cursor:default;}
      
      
+
   #dvichtcu{
-    display:flex;flex-direction:row;
+    display:flex;
+      flex-direction:row;
     height:100%;}
       
   #dvichtc{
-    overflow-y:auto; word-wrap:break-word;
+    overflow-y:auto;
+      word-wrap:break-word;
     width:100%;height:98%;
    background-color:#FFDAB9;}
         
@@ -69,7 +99,8 @@
   float:right;
   width:100px;height:98%;
   font-weight:bold;
- background-color:#FFF0F5;color:black;}
+ background-color:#FFF0F5;
+    color:black;}
         
   #dvichtmsg{
     width:100%;}
@@ -84,16 +115,19 @@
   
 
 caption{
- border:1px solid grey;border-radius:5px;
+ border:1px solid grey;
+    border-radius:5px;
  font-family:arial;/*font-weight:bold;*/
- background-color:#9370DB;color:white;}
+ background-color:#9370DB;
+    color:white;}
  
 th{
   font-family:arial;font-weight:bold;}
   
 tbody>tr{/*:not(:first-child)*/
   /*border:1px dashed grey;*/
-   background-color:#008080;color:white;}/*#FF7F50 #2F4F4F*/
+   background-color:#008080;
+     color:white;}/*#FF7F50 #2F4F4F*/
      
 tbody>tr:hover{/*:not(:first-child):hover*/
   background-color: silver;
@@ -105,14 +139,18 @@ th, td{
 /*style inf user cht rqs..*/
 
 #dvinfusr{
-        display:inline-flex;flex-direction:row;
-        border:1px solid grey;}
+    display:inline-flex;
+      flex-direction:row;
+    border:1px solid grey;}
         
-        #dvinfusr>div{
-        border:1px dashed grey;padding-right:5px;}
+ #dvinfusr>div{
+     border:1px dashed grey;
+       padding-right:5px;}
           
     #dvcrrprfcht{
-      display:flex;flex-direction:column;justify-content:center;
+      display:flex;
+        flex-direction:column;
+        justify-content:center;
       padding:5px;}
       
     #dvcrrprfcht:hover{
@@ -126,88 +164,126 @@ th, td{
 /*waiting section chtrqs..*/
 
 #dvwti{
-      display:flex;flex-direction:row;justify-content:space-evenly;
-      width:200px;
-      border:1px solid grey;border-radius:5px;}
+  display:flex;
+    flex-direction:row;j
+    ustify-content:space-evenly;
+  width:200px;
+ border:1px solid grey;
+    border-radius:5px;}
+
     #dvwti>div{
-      border:1px solid grey;border-radius:5px;}
+      border:1px solid grey;
+        border-radius:5px;}
+
     #dvwti_t{
       text-align:center;
       width:90%;
-      background-color:#2e8b57;color:white;}
+      background-color:#2e8b57;
+        color:white;}
     #dvwti_x{
       text-align:center;
       width:10%;
-      background-color:#800000;color:white;}
+      background-color:#800000;
+        color:white;}
 
 /*receiving chat request..*/
 
 #dvchtrqsof{
-      display:flex;flex-direction:row;justify-content:space-evenly;
-      width:200px;
-      border:1px solid grey;border-radius:5px;}
+  display:flex;
+    flex-direction:row;
+    justify-content:space-evenly;
+  width:200px;
+ border:1px solid grey;
+    border-radius:5px;}
+
     #dvchtrqsof>div{
-      border:1px solid grey;border-radius:5px;}
+      border:1px solid grey;
+        border-radius:5px;}
     #dvchtrqsof_t{
       text-align:center;
       width:80%;
-      background-color:#2e8b57;color:white;}
+      background-color:#2e8b57;
+        color:white;}
     #dvchtrqsof_m{
       text-align:center;
       width:10%;}
     #dvchtrqsof_x{
       text-align:center;
       width:10%;
-      background-color:#800000;color:white;}
+      background-color:#800000;
+        color:white;}
 
 /*chat request..*/
 
 #dvchtrqswth{
-  display:flex;flex-direction:column;/*overflow:auto;resize:both;*/
-  position:absolute;left:15%;top:20%;
+  display:flex;
+    flex-direction:column;
+  /*overflow:auto;resize:both;*/
+  position:absolute;
+    left:15%;top:20%;
   width:250px;height:200px;
  border:1px solid grey;
   background-color:white;}
         
       
 #dvchtrqswth div{
-  border:1px solid grey;border-radius:5px;margin:0px;}
+  border:1px solid grey;
+    border-radius:5px;
+    margin:0px;}
       
  #dvchtr_t{
-   display:flex;flex-direction:row;justify-content:center;
+   display:flex;
+     flex-direction:row;
+     justify-content:center;
    height:30px;
   font-family:arial;}
         
   #dvchtr_tn{
-    display:flex;flex-direction:column;justify-content:center;text-align:center;
+    display:flex;
+      flex-direction:column;
+      justify-content:center;
+      text-align:center;
     width:70%;height:100%;
-   background-color:#2E8B57;color:white;
+   background-color:#2E8B57;
+      color:white;
     cursor:move;}
         
       
 #dvchtr_tm{
-   display:flex;flex-direction:column;justify-content:center;text-align:center;
+   display:flex;
+     flex-direction:column;
+     justify-content:center;
+     text-align:center;
    width:10%;height:100%;
    cursor:default;}
 
 #dvchtr_tl{
-  display:flex;flex-direction:column;justify-content:center;text-align:center;
-   width:10%;height:100%;
-   cursor:default;}
+  display:flex;
+    flex-direction:column;
+    justify-content:center;
+    text-align:center;
+  width:10%;height:100%;
+  cursor:default;}
     
 #dvchtr_tx{
-   display:flex;flex-direction:column;justify-content:center;text-align:center;
+   display:flex;
+     flex-direction:column;
+     justify-content:center;
+     text-align:center;
    width:10%;height:100%;
-  background-color:#800000;color:white;/*#800000 #4B0082*/
+  background-color:#800000;
+    color:white;/*#800000 #4B0082*/
    cursor:default;}
      
      
   #dvchtr_cu{
-    display:flex;flex-direction:row;
+    display:flex;
+      flex-direction:row;
     height:100%;}
       
   #dvchtr_c{
-    overflow-y:auto; word-wrap:break-word;
+    overflow-y:auto;
+      word-wrap:break-word;
     width:100%;height:98%;
    background-color:#DEB887;}
         
@@ -216,7 +292,8 @@ th, td{
   float:right;
   width:100px;height:98%;
   font-weight:bold;
- background-color:#FFA07A;color:black;}
+ background-color:#FFA07A;
+    color:black;}
         
   #dvchtr_msg{
     width:100%;}
