estilo cambiado, fix funcionamiento

--- a/client/styles/chat.css
+++ b/client/styles/chat.css
@@ -14,10 +14,12 @@
       color:white;}
 
    .spchtrm{
-    border:1px  grey;
+    /*border:1px solid;*/
+      border-radius:5px;
       box-shadow:5px -5px 5px grey;
-    font-family:"Playball",cursive;
-      font-size:20px;font-weight:bold;
+    font-family:"Comic Sans MS", cursive, sans-serif;
+    background-color:#2F4F4F;
+      color:white;
     cursor:pointer;}
 .spchtcnt{
   border:1px solid grey;
@@ -161,8 +163,10 @@
  /*tabla users chat..*/
      
 #tblusrs{
+  width:100%;
   border-collapse:collapse;
-  width:100%;}
+    border-radius:5px;
+  background-color:#34495E}
   
 
 caption{
@@ -173,11 +177,12 @@ caption{
     color:white;}
  
 th{
-  font-family:arial;font-weight:bold;}
+  font-family:arial;font-weight:bold;
+  color:#dd5;}
   
 tbody>tr{/*:not(:first-child)*/
   /*border:1px dashed grey;*/
-   background-color:#008080;
+   /*background-color:#008080;*/
      color:white;}/*#FF7F50 #2F4F4F*/
      
 tbody>tr:hover{/*:not(:first-child):hover*/
@@ -216,8 +221,8 @@ th, td{
 
 #dvwti{
   display:flex;
-    flex-direction:row;j
-    ustify-content:space-evenly;
+    flex-direction:row;
+    justify-content:space-evenly;
   width:200px;
  border:1px solid grey;
     border-radius:5px;}
