stilo por fuera y dentro, falta signup

--- a/client/styles/chat.css
+++ b/client/styles/chat.css
@@ -14,7 +14,7 @@
       color:white;}
 
    .spchtrm{
-    /*border:1px solid;*/
+    border:1px solid;
       border-radius:5px;
       box-shadow:5px -5px 5px grey;
     font-family:"Comic Sans MS", cursive, sans-serif;
