--- a/client/styles/chat.css
+++ b/client/styles/chat.css
@@ -1,23 +1,17 @@
 /*style chat..*/
-   #dvchtc>*>div{
-    border:1px solid grey;
-       border-radius:5px;}
-
+  
   #dvchtrnm{
     display:block;
       text-align:center;
-   border:1px solid grey;
-      border-radius:5px;
-      margin:0px;
+    border-bottom:1px solid black;
     font-family:arial;
-    background-color:#9370DB;
-      color:white;}
+    color:#2F4F4F;}
 
    .spchtrm{
-    border:1px solid;
+    border:1px solid black;
       border-radius:5px;
-      box-shadow:5px -5px 5px grey;
-    font-family:"Comic Sans MS", cursive, sans-serif;
+      /*box-shadow:5px -5px 5px grey;*/
+    font-family:Tahoma, Geneva, sans-serif;
     background-color:#2F4F4F;
       color:white;
     cursor:pointer;}
@@ -33,17 +27,14 @@
     flex-direction:column;
   /*overflow:auto;resize:both;*/
   position:absolute;
-    left:15%;top:20%;
-  width:250px;height:200px;
- border:1px solid grey;
-  background-color:white;}
-        
-      
-.dvcht div{
+    left:12%;top:20%;
+  width:80%;height:60%;max-width:600px;
   border:1px solid grey;
     border-radius:5px;
-    margin:0px;}
-     
+    box-shadow:0 0 5px #444;
+  background-color:white;}
+        
+    
 
 
  .dvcht_t{
@@ -51,7 +42,7 @@
      flex-direction:row;
      justify-content:center;
    height:30px;
-  font-family:arial;}
+   font-family:arial;}
         
   .dvcht_tnm{
     display:flex;
@@ -59,6 +50,7 @@
       justify-content:center;
       text-align:center;
     width:70%;height:100%;
+    border-radius:5px 0 0 0;
     cursor:move;}
 
         
@@ -85,6 +77,7 @@
      justify-content:center;
      text-align:center;
    width:10%;height:100%;
+   border-radius:0 5px 0 0;
    cursor:default;}
 
      
@@ -93,6 +86,7 @@
   .dvcht_cu{
     display:flex;
       flex-direction:row;
+    position:relative;
     height:100%;}
       
   .dvcht_c{
@@ -116,9 +110,9 @@
     display:flex;
       flex-direction:row;  }  
   .btnchtmsg{
-    width:60px;} 
+    width:40px;} 
   .btnchtemj{
-    width:30px;
+    width:40px;
     margin-right:20px;}
     
   .inchtmsg{
@@ -141,6 +135,15 @@
 #dvcht_u_gnrl{
   background-color:#FFF0F5;
     color:black;}
+
+#dvtyp{
+  position:absolute;
+    top:0px;
+  width:70%;/*height:20%;*/
+  background-color:white;}
+#sptyp{
+  color:grey;}
+
 
 /*..chat general*/
 
@@ -170,11 +173,9 @@
   
 
 caption{
- border:1px solid grey;
-    border-radius:5px;
+ border-bottom:1px solid black;
  font-family:arial;/*font-weight:bold;*/
- background-color:#9370DB;
-    color:white;}
+ color:#34495E;}
  
 th{
   font-family:arial;font-weight:bold;
@@ -212,7 +213,10 @@ th, td{
     #dvcrrprfcht:hover{
     background-color:grey;
       cursor:pointer;}
-      
+    
+#dvinfprfcht{
+  background-color:#f5f5f5;}
+
       #dvinfprfcht>li:hover{
     background-color:grey;
       cursor:pointer;}
