--- a/client/styles/chat.css
+++ b/client/styles/chat.css
@@ -7,10 +7,19 @@
     font-family:arial;
     color:#2F4F4F;}
 
+#inlstroom{
+  width:120px;
+}
+
+#fmgoroom{
+  display:inline-block;
+}
+
    .spchtrm{
     border:1px solid black;
       border-radius:5px;
       /*box-shadow:5px -5px 5px grey;*/
+      margin-left:5px;
     font-family:Tahoma, Geneva, sans-serif;
     background-color:#2F4F4F;
       color:white;
@@ -99,8 +108,17 @@
 .dvcht_u{
   float:right;
     word-wrap:break-word;
+  position:relative;
   width:100px;height:98%;
   font-weight:bold;}
+.dvcht_u_nm{
+      overflow-y:auto;
+        word-wrap:break-word;
+    }
+    .dvcht_u_bts{
+      position:absolute;
+        bottom:0px;
+    }
 
         
   .dvchtmsg{
@@ -117,6 +135,32 @@
     
   .inchtmsg{
     width:100%;}
+
+
+.dvdct{
+      overflow:auto;
+      width:100%;height:0px; /*250px;*/
+      /*border:1px solid;*/
+      background-color:grey;
+    }
+    .dvdct input[list="dtlstlng"]{
+      width:40px;
+    }
+
+ /*base*/
+   .dvcht_tnm{
+  background-color:#9370db;
+    color:white;}
+.dvcht_tx{
+  background-color:#483D8B;
+    color:white;
+  /*#800000 #4B0082*/}
+
+.dvcht_c{
+  background-color:#ffDAB9;}
+.dvcht_u{
+  background-color:#FFF0F5;
+    color:black;}
 
 /*..chat cuadro*/
 
@@ -178,7 +222,8 @@ caption{
  color:#34495E;}
  
 th{
-  font-family:arial;font-weight:bold;
+  font-family:arial;
+    font-weight:bold;
   color:#dd5;}
   
 tbody>tr{/*:not(:first-child)*/
@@ -228,7 +273,7 @@ th, td{
     flex-direction:row;
     justify-content:space-evenly;
   width:200px;
- border:1px solid grey;
+  border:1px solid grey;
     border-radius:5px;}
 
     #dvwti>div{
@@ -253,7 +298,7 @@ th, td{
     flex-direction:row;
     justify-content:space-evenly;
   width:200px;
- border:1px solid grey;
+  border:1px solid grey;
     border-radius:5px;}
 
     #dvchtrqsof>div{
